--- a/package.json
+++ b/package.json
@@ -9,5 +9,12 @@
   },
   "dependencies": {
     "@sharaal/sql": "^1.0.0"
+  },
+  "scripts": {
+    "lint": "standard",
+    "lint:fix": "standard --fix"
+  },
+  "devDependencies": {
+    "standard": "^12.0.1"
   }
 }
