--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@sharaal/sql": "^1.0.0"
+    "@sharaal/sql-pg": "^1.0.0"
   },
   "scripts": {
     "lint": "standard",
